Fixed p spacing for 1200+.

--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,6 @@ img:active {
 
   p {
     font-size: 1.4em;
-    margin: 0 10%;
+    margin: 5%;
   }
 }
